# worshipviewer

./: .dockerignore  .gitignore  .spectral.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  NOTICE  README.md
backend/: .env.example  Cargo.toml  openapi.json
backend/.cargo/: audit.toml  config.toml
backend/db-migrations/: 20260420000009_define_table_setlist.surql  20260508120000_drop_http_audit_computed_fields_user_session.surql  20260509120000_team_name_fulltext_search.surql  20260601120000_remove_user_default_collection.surql  20260601120001_remove_collection_default_unset_event.surql  20260601120002_setlist_song_tempo_override.surql  20260601130000_team_cover.surql  20260601140000_remove_collection_cover_blob_cascade.surql  20260615120000_define_table_metrics.surql  20260615120000_setlist_song_language_override.surql  20260618120000_define_metrics_daily_summaries.surql  20260622120000_setlist_song_flow.surql  20260622120000_song_link_flow.surql  20260718120000_define_player_rooms.surql  20260720090000_make_player_rooms_event_driven.surql  README.md
backend/src/: about.rs  audit_events_tests.rs  docs.rs  governor_audit.rs  http_audit.rs  http_tests.rs  main.rs  settings.rs  test_helpers.rs
backend/src/auth/: context.rs  middleware.rs  mod.rs  surreal_repo.rs
backend/src/auth/oidc/: client.rs  rest.rs
backend/src/database/: migrations.rs
backend/src/resources/: common.rs  mod.rs  rest.rs
backend/src/resources/blob/: rest.rs  service.rs
backend/src/resources/collection/: mod.rs  model.rs  repository.rs  rest.rs  service.rs  surreal_repo.rs
backend/src/resources/monitoring/: mod.rs  model.rs  repo.rs  rest.rs  service.rs
backend/src/resources/player_room/: mod.rs  rest.rs  service.rs
backend/src/resources/setlist/: model.rs  rest.rs  service.rs  surreal_repo.rs
backend/src/resources/song/: model.rs  rest.rs  service.rs  surreal_repo.rs
backend/src/resources/team/: mod.rs  model.rs  repository.rs  rest.rs  service.rs  surreal_repo.rs
backend/src/resources/user/: mod.rs  model.rs  profile_picture.rs  repository.rs  rest.rs  service.rs  surreal_repo.rs
backend/tests/: 1_teams.yml  2_users.yml  3_sessions.yml  4_songs.yml  5_collections.yml  6_setlists.yml
cli/: Cargo.toml
cli/src/: commands.rs  config.rs  http_extra.rs  list_fetch.rs  list_output.rs  main.rs  session.rs  validate.rs
cli/src/handlers/: about.rs  auth.rs  blobs.rs  collections.rs  mod.rs  monitoring.rs  schema.rs  sessions.rs  setlists.rs  songs.rs  teams.rs  users.rs
frontend/: Cargo.toml  package.json  pnpm-lock.yaml
frontend/app/: .gitignore  eslint.config.js  index.html  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/app/e2e/: a11y-smoke.spec.ts  auth.spec.ts  collections.spec.ts  command-palette.spec.ts  editors.spec.ts  hello-world.spec.ts  helpers.ts  hub-lists.spec.ts  mobile-viewport.spec.ts  move-songs.spec.ts  offline.spec.ts  player-av.spec.ts  player-normal.spec.ts  player-rooms.spec.ts  pull-refresh.spec.ts  serve-backend.mjs  sessions.spec.ts  setlists.spec.ts  settings.spec.ts  songs.spec.ts  teams.spec.ts
frontend/app/e2e/fixtures/: api.ts  auth.ts  sample.chordpro
frontend/app/e2e/pages/: hub.ts  login.ts  settings.ts  team-detail.ts
frontend/app/scripts/: lint-flow-coverage.mjs  openapi-sync.mjs
frontend/app/src/: App.tsx  app-router.ts  index.css  main.tsx  routeTree.gen.ts  vite-env.d.ts
frontend/app/src/adapters/: chord-engine-wasm.ts
frontend/app/src/api/: blob-data.test.ts  blob-data.ts  client.ts  collections-detail.ts  list-fetch.test.ts  list-fetch.ts  monitoring.ts  openapi.json  problem.ts  profile-picture.ts  resolve-profile-avatar.ts  schema.d.ts  session.ts  songs-detail.ts  songs-like.ts  team-cover-upload.test.ts  team-cover-upload.ts  teams-sessions-fetch.ts
frontend/app/src/commands/: hub-commands.ts
frontend/app/src/components/: SessionLoadingFallback.tsx  SessionUnavailableScreen.tsx
frontend/app/src/context/: HubSearchProvider.tsx  SetlistPaletteBridgeContext.tsx  SongEditorNavigationBridgeContext.tsx  hub-search-context.ts
frontend/app/src/hooks/: useAvBilingualPreference.ts  useBlobUrl.ts  useCanEditSetlist.ts  useCanEditSong.ts  useChordFormatPreference.ts  useCollectionAutosave.test.tsx  useCollectionAutosave.ts  useCollectionDetailQuery.ts  useCurrentSessionCredential.ts  useDeleteHubEntity.ts  useEnsureTargetCollection.ts  useHideChordsPreference.ts  useHubListsUpdatedAt.ts  useHubViewMode.ts  useInfiniteHubList.ts  useIsPlayerCached.ts  useLongPress.ts  useMediaQuery.test.tsx  useMediaQuery.ts  usePlayerIndexSearchSync.test.tsx  usePlayerIndexSearchSync.ts  usePlayerScrollPreference.ts  useRemappedBlobImageUrl.ts  useResolvedAvItemSections.test.tsx  useResolvedAvItemSections.ts  (+17 more)
frontend/crates/chordlib-wasm/: Cargo.toml
frontend/docs/: architecture.md  e1-e8-exit-audit.md  epic-e1-action-plan.md  epic-e1-e8-completion-plan.md  epic-e2-action-plan.md  epic-e7-action-plan.md  epic-e7.1-action-plan.md  epic-e7.2-action-plan.md  grill-session.md  legacy-vs-frontend2-analysis.md  plan.md  roadmap.md  setlist-editor.md  tech-stack.md
frontend/src/: route.rs
frontend/src/api/: api.rs  mod.rs
frontend/src/components/: setlist_editor.rs  song_viewer.rs  string_input.rs
frontend/src/pages/: collections.rs  login.rs  presenter.rs  presenter_slides.rs  setlists.rs  songs.rs
shared/: Cargo.toml
shared/src/: about.rs  lib.rs  patch.rs  player_room.rs
shared/src/api/: list_query.rs  mod.rs  song_list_query.rs
shared/src/blob/: mod.rs
shared/src/collection/: collection.rs  mod.rs
shared/src/error/: mod.rs
shared/src/like/: mod.rs
shared/src/monitoring/: http_audit_log.rs  metrics_query.rs  mod.rs
shared/src/net/: desktop.rs  mod.rs  wasm.rs
shared/src/player/: mod.rs  player.rs  player_item.rs  scroll_type.rs  toc_item.rs
shared/src/setlist/: mod.rs  setlist.rs
shared/src/song/: link.rs  mod.rs  song.rs  song_data_schema.rs
shared/src/team/: mod.rs  team.rs
shared/src/user/: metrics.rs  mod.rs  request.rs  session.rs  user.rs
(+596 files in other folders)
