[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4", default-features = true }
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "serde",
] }
openidconnect = "4"
once_cell = "1"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "gzip",
    "multipart",
] }
# Direct dependency: Rustls 0.23+ requires a single process-wide CryptoProvider. We use
# `ring` (same as reqwest/surrealdb) and install it in `main` before any TLS (wss, OIDC).
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["v4"] }
rand = { version = "0.10", features = ["std"] }
envy = "0.4.2"
futures-util = "0.3"
utoipa = { version = "5", features = ["chrono"] }
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
surrealdb = { version = "3.0.5", default-features = false, features = [
    "kv-mem",
    "protocol-http",
    "protocol-ws",
    "rustls",
] }
surrealdb-types = "3.0.5"
async-trait = "0.1.89"
lettre = { version = "0.11.21", features = ["tokio1-native-tls"] }
ring = "0.17.14"
hex = "0.4.3"
actix-files = "0.6.10"
actix-governor = "0.10"
shared = { path = "../shared", features = ["backend"] }
chordlib = { version = "0.10.0", features = ["html"] }
zip = "8.6.0"
imagesize = "0.14"

[dev-dependencies]
anyhow = "1"
tempfile = "3"
tracing-test = "0.2.6"
