[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# WASM binaries cannot be executed by the native `cargo test` harness.
[[bin]]
name = "frontend"
path = "src/main.rs"
test = false
bench = false

[dependencies]
shared = { path = "../shared", features = ["frontend"] }
yew = { version = "0.23.0", features = ["csr"] }
yew-router = "0.20"
stylist = { version = "0.15.1", features = ["yew_integration", "parser"] }
wasm-bindgen-futures = "0.4.70"
wasm-bindgen = "0.2.120"
gloo-net = "0.7.0"
gloo-console = "0.4.0"
yew-hooks = "0.6.4"
web-sys = { version = "0.3.97", features = [
    "Blob",
    "DragEvent",
    "File",
    "HtmlInputElement",
    "Location",
    "MouseEvent",
    "Navigator",
    "Performance",
    "PerformanceTiming",
    "Request",
    "RequestCredentials",
    "ServiceWorker",
    "ServiceWorkerContainer",
    "TouchEvent",
    "Window",
    "Crypto",
    "HtmlSelectElement",
    "Document",
    "Element",
    "HtmlElement",
] }
gloo = { version = "0.12.0", features = ["futures"] }
serde = { version = "1.0.228", features = ["derive"] }
url = "2.5.8"
getrandom_0_3 = { package = "getrandom", version = "0.4.2", features = [
    "wasm_js",
] }
js-sys = "0.3.97"
chrono = { version = "0.4.44", default-features = false, features = [
    "clock",
    "serde",
] }
serde_json = "1.0.149"
