[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
chordlib = { path = "../../chordlib", features = ["html"] }
chrono = { version = "0.4.44", default-features = false, features = [
    "clock",
    "serde",
] }
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.23.1", features = ["v4"], optional = true }
tracing = { version = "0.1", optional = true }
utoipa = { version = "5", optional = true, features = ["chrono"] }
thiserror = "2.0"
async-trait = "0.1"
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
gloo-net = { version = "0.7", features = ["http"], optional = true }
js-sys = { version = "0.3.97", optional = true }
wasm-bindgen = { version = "0.2.120", optional = true }
web-sys = { version = "0.3.97", features = ["RequestCredentials"], optional = true }

[features]
backend = ["utoipa", "tracing", "uuid"]
cli = ["reqwest"]
frontend = ["gloo-net", "js-sys", "wasm-bindgen", "web-sys"]
