[package]
name = "shared"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
chordlib = { version = "0.12.4", features = ["html"] }
chrono = { version = "0.4.44", default-features = false, features = [
    "clock",
    "serde",
] }
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.23.1", features = ["v4"], optional = true }
tracing = { version = "0.1", optional = true }
utoipa = { version = "5", optional = true, features = ["chrono"] }
thiserror = "2.0"
async-trait = "0.1"
serde_json = "1.0"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"], optional = true }

[features]
backend = ["utoipa", "tracing", "uuid"]
cli = ["reqwest"]
