[package]
name = "chordlib-wasm"
version = "0.1.0"
edition = "2021"
description = "chordlib bindings for Worship Viewer frontend (WASM)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chordlib = { version = "0.11.0", features = ["html"] }
serde_json = "1.0"
wasm-bindgen = "0.2.120"

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[profile.release]
lto = true
opt-level = "s"
