[package]
name = "chordlib-wasm"
version = "0.1.0"
edition = "2021"
description = "chordlib bindings for Worship Viewer frontend (WASM)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chordlib = { version = "0.15.0", features = ["html"] }
serde_json = "1.0"
wasm-bindgen = "0.2.122"

[dev-dependencies]
wasm-bindgen-test = "0.3.52"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
lto = true
opt-level = "s"
